Initial update to 1.18.x, Java 17, and the official mappings channel. Still lots of stuff not working.