@@ -2,48 +2,51 @@ package io.github.tofodroid.mods.mimi.client.gui;
 
 import java.util.List;
 import java.util.stream.Collectors;
-import com.mojang.blaze3d.matrix.MatrixStack;
+
+import com.mojang.blaze3d.systems.RenderSystem;
+import com.mojang.blaze3d.vertex.PoseStack;
+import com.mojang.math.Vector3f;
+
 import io.github.tofodroid.mods.mimi.common.container.ASwitchboardContainer;
 import io.github.tofodroid.mods.mimi.common.item.ItemMidiSwitchboard;
 import io.github.tofodroid.mods.mimi.common.item.ModItems;
 import net.minecraft.client.Minecraft;
-import net.minecraft.entity.player.PlayerInventory;
-import net.minecraft.util.math.vector.Vector2f;
-import net.minecraft.util.text.ITextComponent;
+import net.minecraft.network.chat.Component;
 import net.minecraft.util.SortedArraySet;
+import net.minecraft.world.entity.player.Inventory;
 
 public abstract class ASwitchboardBlockGui<T extends ASwitchboardContainer> extends ASwitchboardGui<T> {
     // Button Boxes
-    protected static final Vector2f ALL_MIDI_BUTTON_COORDS = new Vector2f(16,48);
-    protected static final Vector2f GEN_MIDI_BUTTON_COORDS = new Vector2f(35,48);
-    protected static final Vector2f CLEAR_MIDI_BUTTON_COORDS = new Vector2f(16,73);
-    protected static final Vector2f FILTER_NOTE_OCTAVE_BUTTON_COORDS = new Vector2f(211,48);
-    protected static final Vector2f FILTER_NOTE_LETTER_BUTTON_COORDS = new Vector2f(192,48);
-    protected static final Vector2f FILTER_NOTE_INVERT_BUTTON_COORDS = new Vector2f(275,48);
-    protected static final Vector2f FILTER_INSTRUMENT_PREV_BUTTON_COORDS = new Vector2f(17,113);
-    protected static final Vector2f FILTER_INSTRUMENT_NEXT_BUTTON_COORDS = new Vector2f(141,113);
-    protected static final Vector2f FILTER_INSTRUMENT_INVERT_BUTTON_COORDS = new Vector2f(160,113);
-    protected static final Vector2f TRANSMIT_SELF_BUTTON_COORDS = new Vector2f(218,97);
-    protected static final Vector2f TRANSMIT_PUBLIC_BUTTON_COORDS = new Vector2f(237,97);
-    protected static final Vector2f TRANSMIT_CLEAR_BUTTON_COORDS = new Vector2f(256,97);
-    protected static final Vector2f BROADCAST_MODE_BUTTON_COORDS = new Vector2f(143,135);
-    protected static final Vector2f BROADCAST_NOTE_OCTAVE_BUTTON_COORDS = new Vector2f(211,134);
-    protected static final Vector2f BROADCAST_NOTE_LETTER_BUTTON_COORDS = new Vector2f(192,134);
-    protected static final Vector2f INSTRUMENT_VOLUME_UP_BUTTON_COORDS = new Vector2f(306,74);
-    protected static final Vector2f INSTRUMENT_VOLUME_DOWN_BUTTON_COORDS = new Vector2f(306,110);
+    protected static final Vector3f ALL_MIDI_BUTTON_COORDS = new Vector3f(16,48,0);
+    protected static final Vector3f GEN_MIDI_BUTTON_COORDS = new Vector3f(35,48,0);
+    protected static final Vector3f CLEAR_MIDI_BUTTON_COORDS = new Vector3f(16,73,0);
+    protected static final Vector3f FILTER_NOTE_OCTAVE_BUTTON_COORDS = new Vector3f(211,48,0);
+    protected static final Vector3f FILTER_NOTE_LETTER_BUTTON_COORDS = new Vector3f(192,48,0);
+    protected static final Vector3f FILTER_NOTE_INVERT_BUTTON_COORDS = new Vector3f(275,48,0);
+    protected static final Vector3f FILTER_INSTRUMENT_PREV_BUTTON_COORDS = new Vector3f(17,113,0);
+    protected static final Vector3f FILTER_INSTRUMENT_NEXT_BUTTON_COORDS = new Vector3f(141,113,0);
+    protected static final Vector3f FILTER_INSTRUMENT_INVERT_BUTTON_COORDS = new Vector3f(160,113,0);
+    protected static final Vector3f TRANSMIT_SELF_BUTTON_COORDS = new Vector3f(218,97,0);
+    protected static final Vector3f TRANSMIT_PUBLIC_BUTTON_COORDS = new Vector3f(237,97,0);
+    protected static final Vector3f TRANSMIT_CLEAR_BUTTON_COORDS = new Vector3f(256,97,0);
+    protected static final Vector3f BROADCAST_MODE_BUTTON_COORDS = new Vector3f(143,135,0);
+    protected static final Vector3f BROADCAST_NOTE_OCTAVE_BUTTON_COORDS = new Vector3f(211,134,0);
+    protected static final Vector3f BROADCAST_NOTE_LETTER_BUTTON_COORDS = new Vector3f(192,134,0);
+    protected static final Vector3f INSTRUMENT_VOLUME_UP_BUTTON_COORDS = new Vector3f(306,74,0);
+    protected static final Vector3f INSTRUMENT_VOLUME_DOWN_BUTTON_COORDS = new Vector3f(306,110,0);
 
     // Text Boxes
-    protected static final Vector2f FILTER_NOTE_TEXTBOX_COORDS = new Vector2f(232,52);
-    protected static final Vector2f FILTER_INSTRUMENT_TEXTBOX_COORDS = new Vector2f(38,117);
-    protected static final Vector2f LINKED_TRANSMITTER_TEXTBOX_COORDS = new Vector2f(194,85);
-    protected static final Vector2f BROADCAST_NOTE_TEXTBOX_COORDS = new Vector2f(232,138);
-    protected static final Vector2f INSTRUMENT_VOLUME_TEXTBOX_COORDS = new Vector2f(308,96);
+    protected static final Vector3f FILTER_NOTE_TEXTBOX_COORDS = new Vector3f(232,52,0);
+    protected static final Vector3f FILTER_INSTRUMENT_TEXTBOX_COORDS = new Vector3f(38,117,0);
+    protected static final Vector3f LINKED_TRANSMITTER_TEXTBOX_COORDS = new Vector3f(194,85,0);
+    protected static final Vector3f BROADCAST_NOTE_TEXTBOX_COORDS = new Vector3f(232,138,0);
+    protected static final Vector3f INSTRUMENT_VOLUME_TEXTBOX_COORDS = new Vector3f(308,96,0);
 
     // Status Boxes
-    protected static final Vector2f MIDI_STATUSBOX_COORDS = new Vector2f(41,66);
-    protected static final Vector2f FILTER_NOTE_STATUSBOX_COORDS = new Vector2f(294,54);
-    protected static final Vector2f FILTER_INSTRUMENT_STATUSBOX_COORDS = new Vector2f(179,119);
-    protected static final Vector2f BROADCAST_MODE_STATUSBOX_COORDS = new Vector2f(161,136);
+    protected static final Vector3f MIDI_STATUSBOX_COORDS = new Vector3f(41,66,0);
+    protected static final Vector3f FILTER_NOTE_STATUSBOX_COORDS = new Vector3f(294,54,0);
+    protected static final Vector3f FILTER_INSTRUMENT_STATUSBOX_COORDS = new Vector3f(179,119,0);
+    protected static final Vector3f BROADCAST_MODE_STATUSBOX_COORDS = new Vector3f(161,136,0);
 
     // Runtime Data
     protected List<Byte> INSTRUMENT_ID_LIST;
@@ -52,7 +55,7 @@ public abstract class ASwitchboardBlockGui<T extends ASwitchboardContainer> exte
     protected Integer filterNoteLetter;
     protected String filterNoteString = "";
 
-    public ASwitchboardBlockGui(T container, PlayerInventory inv, ITextComponent textComponent) {
+    public ASwitchboardBlockGui(T container, Inventory inv, Component textComponent) {
         super(container, inv, 337, 250, 395, "textures/gui/container_generic_switchboard_block.png", textComponent);
     }
 
@@ -115,9 +118,10 @@ public abstract class ASwitchboardBlockGui<T extends ASwitchboardContainer> exte
 			} else if(channelWidgetEnabled()) {
 				// Individual Midi Channel Buttons
 				for(int i = 0; i < 16; i++) {
-					Vector2f buttonCoords = new Vector2f(
-						GEN_MIDI_BUTTON_COORDS.x + (i % 8) * 19,
-						GEN_MIDI_BUTTON_COORDS.y + (i / 8) * 27
+					Vector3f buttonCoords = new Vector3f(
+						GEN_MIDI_BUTTON_COORDS.x() + (i % 8) * 19,
+						GEN_MIDI_BUTTON_COORDS.y() + (i / 8) * 27,
+                        0
 					);
 
 					if(clickedBox(imouseX, imouseY, buttonCoords)) {
@@ -132,18 +136,18 @@ public abstract class ASwitchboardBlockGui<T extends ASwitchboardContainer> exte
     }
 
     @Override
-    protected MatrixStack renderGraphics(MatrixStack matrixStack, int mouseX, int mouseY, float partialTicks) {
+    protected PoseStack renderGraphics(PoseStack matrixStack, int mouseX, int mouseY, float partialTicks) {
         // Set Texture
-        Minecraft.getInstance().getTextureManager().bindTexture(guiTexture);
+        RenderSystem.setShaderTexture(0, guiTexture);
 
         // GUI Background
-        blit(matrixStack, this.guiLeft, this.guiTop, this.getBlitOffset(), 0, 0, this.xSize, this.ySize, TEXTURE_SIZE, TEXTURE_SIZE);
+        blit(matrixStack, START_X, START_Y, this.getBlitOffset(), 0, 0, this.GUI_WIDTH, this.GUI_HEIGHT, TEXTURE_SIZE, TEXTURE_SIZE);
 
         // GUI Title
-        blit(matrixStack, this.guiLeft + new Float(titleBoxPos().x).intValue(), this.guiTop + new Float(titleBoxPos().y).intValue(), this.getBlitOffset(), new Float(titleBoxBlit().x).intValue(), new Float(titleBoxBlit().y).intValue(), new Float(titleBoxSize().x).intValue(), new Float(titleBoxSize().y).intValue(), TEXTURE_SIZE, TEXTURE_SIZE);
+        blit(matrixStack, START_X + Float.valueOf(titleBoxPos().x()).intValue(), START_Y + Float.valueOf(titleBoxPos().y()).intValue(), this.getBlitOffset(), Float.valueOf(titleBoxBlit().x()).intValue(), Float.valueOf(titleBoxBlit().y()).intValue(), Float.valueOf(titleBoxSize().x()).intValue(), Float.valueOf(titleBoxSize().y()).intValue(), TEXTURE_SIZE, TEXTURE_SIZE);
 
         // Switchboard Slot
-        blit(matrixStack, this.guiLeft + new Float(switchboardSlotPos().x).intValue(), this.guiTop + new Float(switchboardSlotPos().y).intValue(), this.getBlitOffset(), 143, 367, 140, 28, TEXTURE_SIZE, TEXTURE_SIZE);
+        blit(matrixStack, START_X + Float.valueOf(switchboardSlotPos().x()).intValue(), START_Y + Float.valueOf(switchboardSlotPos().y()).intValue(), this.getBlitOffset(), 143, 367, 140, 28, TEXTURE_SIZE, TEXTURE_SIZE);
 
         // Widgets
         if(this.selectedSwitchboardStack != null) {
@@ -151,78 +155,78 @@ public abstract class ASwitchboardBlockGui<T extends ASwitchboardContainer> exte
 			SortedArraySet<Byte> acceptedChannels = ItemMidiSwitchboard.getEnabledChannelsSet(this.selectedSwitchboardStack);
 			if(acceptedChannels != null && !acceptedChannels.isEmpty()) {
 				for(Byte channelId : acceptedChannels) {
-                    blit(matrixStack, this.guiLeft + new Float(MIDI_STATUSBOX_COORDS.x).intValue() + 19 * (channelId % 8), this.guiTop + new Float(MIDI_STATUSBOX_COORDS.y).intValue() + (channelId / 8) * 25, this.getBlitOffset(), 213, 281, 3, 3, TEXTURE_SIZE, TEXTURE_SIZE);
+                    blit(matrixStack, START_X + Float.valueOf(MIDI_STATUSBOX_COORDS.x()).intValue() + 19 * (channelId % 8), START_Y + Float.valueOf(MIDI_STATUSBOX_COORDS.y()).intValue() + (channelId / 8) * 25, this.getBlitOffset(), 213, 281, 3, 3, TEXTURE_SIZE, TEXTURE_SIZE);
                 }
 			}
 
             // Broadcast Mode
             if(ItemMidiSwitchboard.getPublicBroadcast(selectedSwitchboardStack)) {
-                blit(matrixStack, this.guiLeft + new Float(BROADCAST_MODE_STATUSBOX_COORDS.x).intValue(), this.guiTop + new Float(BROADCAST_MODE_STATUSBOX_COORDS.y).intValue(), this.getBlitOffset(), 173, 281, 13, 13, TEXTURE_SIZE, TEXTURE_SIZE);
+                blit(matrixStack, START_X + Float.valueOf(BROADCAST_MODE_STATUSBOX_COORDS.x()).intValue(), START_Y + Float.valueOf(BROADCAST_MODE_STATUSBOX_COORDS.y()).intValue(), this.getBlitOffset(), 173, 281, 13, 13, TEXTURE_SIZE, TEXTURE_SIZE);
             } else {
-                blit(matrixStack, this.guiLeft + new Float(BROADCAST_MODE_STATUSBOX_COORDS.x).intValue(), this.guiTop + new Float(BROADCAST_MODE_STATUSBOX_COORDS.y).intValue(), this.getBlitOffset(), 186, 281, 13, 13, TEXTURE_SIZE, TEXTURE_SIZE);
+                blit(matrixStack, START_X + Float.valueOf(BROADCAST_MODE_STATUSBOX_COORDS.x()).intValue(), START_Y + Float.valueOf(BROADCAST_MODE_STATUSBOX_COORDS.y()).intValue(), this.getBlitOffset(), 186, 281, 13, 13, TEXTURE_SIZE, TEXTURE_SIZE);
             }
 			
         	// Filter Note Invert Status Light
 			if(ItemMidiSwitchboard.getInvertNoteOct(selectedSwitchboardStack)) {
-				blit(matrixStack, this.guiLeft + new Float(FILTER_NOTE_STATUSBOX_COORDS.x).intValue(), this.guiTop + new Float(FILTER_NOTE_STATUSBOX_COORDS.y).intValue(), this.getBlitOffset(), 213, 281, 3, 3, TEXTURE_SIZE, TEXTURE_SIZE);
+				blit(matrixStack, START_X + Float.valueOf(FILTER_NOTE_STATUSBOX_COORDS.x()).intValue(), START_Y + Float.valueOf(FILTER_NOTE_STATUSBOX_COORDS.y()).intValue(), this.getBlitOffset(), 213, 281, 3, 3, TEXTURE_SIZE, TEXTURE_SIZE);
 			}
 
             // Filter Instrument Invert Status Light
             if(ItemMidiSwitchboard.getInvertInstrument(selectedSwitchboardStack)) {
-                blit(matrixStack, this.guiLeft + new Float(FILTER_INSTRUMENT_STATUSBOX_COORDS.x).intValue(), this.guiTop + new Float(FILTER_INSTRUMENT_STATUSBOX_COORDS.y).intValue(), this.getBlitOffset(), 213, 281, 3, 3, TEXTURE_SIZE, TEXTURE_SIZE);
+                blit(matrixStack, START_X + Float.valueOf(FILTER_INSTRUMENT_STATUSBOX_COORDS.x()).intValue(), START_Y + Float.valueOf(FILTER_INSTRUMENT_STATUSBOX_COORDS.y()).intValue(), this.getBlitOffset(), 213, 281, 3, 3, TEXTURE_SIZE, TEXTURE_SIZE);
             }
 		}
 
         // Disabled Widgets
         if(!channelWidgetEnabled()) {
-            blit(matrixStack, this.guiLeft + 14, this.guiTop + 32, this.getBlitOffset(), 1, 281, 171, 65, TEXTURE_SIZE, TEXTURE_SIZE);
+            blit(matrixStack, START_X + 14, START_Y + 32, this.getBlitOffset(), 1, 281, 171, 65, TEXTURE_SIZE, TEXTURE_SIZE);
         }
 
         if(!noteFilterWidgetEnabled()) {
-            blit(matrixStack, this.guiLeft + 189, this.guiTop + 32, this.getBlitOffset(), 237, 254, 111, 34, TEXTURE_SIZE, TEXTURE_SIZE);
+            blit(matrixStack, START_X + 189, START_Y + 32, this.getBlitOffset(), 237, 254, 111, 34, TEXTURE_SIZE, TEXTURE_SIZE);
         }
 
         if(!instrumentFilterWidgetEnabled()) {
-            blit(matrixStack, this.guiLeft + 14, this.guiTop + 100, this.getBlitOffset(), 177, 336, 171, 30, TEXTURE_SIZE, TEXTURE_SIZE);
+            blit(matrixStack, START_X + 14, START_Y + 100, this.getBlitOffset(), 177, 336, 171, 30, TEXTURE_SIZE, TEXTURE_SIZE);
         }
 
         if(!linkedTransmitterWidgetEnabled()) {
-            blit(matrixStack, this.guiLeft + 189, this.guiTop + 69, this.getBlitOffset(), 237, 289, 111, 46, TEXTURE_SIZE, TEXTURE_SIZE);
+            blit(matrixStack, START_X + 189, START_Y + 69, this.getBlitOffset(), 237, 289, 111, 46, TEXTURE_SIZE, TEXTURE_SIZE);
         }
 
         if(!broadcastModeWidgetEnabled()) {
-            blit(matrixStack, this.guiLeft + 14, this.guiTop + 133, this.getBlitOffset(), 1, 347, 171, 19, TEXTURE_SIZE, TEXTURE_SIZE);
+            blit(matrixStack, START_X + 14, START_Y + 133, this.getBlitOffset(), 1, 347, 171, 19, TEXTURE_SIZE, TEXTURE_SIZE);
         }
 
         if(!broadcastNoteWidgetEnabled()) {
-            blit(matrixStack, this.guiLeft + 189, this.guiTop + 118, this.getBlitOffset(), 237, 254, 111, 34, TEXTURE_SIZE, TEXTURE_SIZE);
+            blit(matrixStack, START_X + 189, START_Y + 118, this.getBlitOffset(), 237, 254, 111, 34, TEXTURE_SIZE, TEXTURE_SIZE);
         }
 
         if(!instrumentVolumeWidgetEnabled()) {
-            blit(matrixStack, this.guiLeft + 297, this.guiTop + 58, this.getBlitOffset(), 217, 266, 19, 69, TEXTURE_SIZE, TEXTURE_SIZE);
+            blit(matrixStack, START_X + 297, START_Y + 58, this.getBlitOffset(), 217, 266, 19, 69, TEXTURE_SIZE, TEXTURE_SIZE);
         }
 
         return matrixStack;
     }
 
     @Override
-    protected MatrixStack renderText(MatrixStack matrixStack, int mouseX, int mouseY) {
+    protected PoseStack renderText(PoseStack matrixStack, int mouseX, int mouseY) {
 		if(this.selectedSwitchboardStack != null) {
             // MIDI Source Name
             String selectedSourceName = ItemMidiSwitchboard.getMidiSourceName(selectedSwitchboardStack);
-			font.drawString(matrixStack, selectedSourceName.length() <= 22 ? selectedSourceName : selectedSourceName.substring(0,21) + "...", new Float(LINKED_TRANSMITTER_TEXTBOX_COORDS.x).intValue(), new Float(LINKED_TRANSMITTER_TEXTBOX_COORDS.y).intValue(), linkedTransmitterWidgetEnabled() ? 0xFF00E600 : 0xFF005C00);
+			font.draw(matrixStack, selectedSourceName.length() <= 22 ? selectedSourceName : selectedSourceName.substring(0,21) + "...", Float.valueOf(LINKED_TRANSMITTER_TEXTBOX_COORDS.x()).intValue(), Float.valueOf(LINKED_TRANSMITTER_TEXTBOX_COORDS.y()).intValue(), linkedTransmitterWidgetEnabled() ? 0xFF00E600 : 0xFF005C00);
 
 			// Filter Note
-			font.drawString(matrixStack, this.filterNoteString, new Float(FILTER_NOTE_TEXTBOX_COORDS.x).intValue(), new Float(FILTER_NOTE_TEXTBOX_COORDS.y).intValue(), noteFilterWidgetEnabled() ? 0xFF00E600 : 0xFF005C00);
+			font.draw(matrixStack, this.filterNoteString, Float.valueOf(FILTER_NOTE_TEXTBOX_COORDS.x()).intValue(), Float.valueOf(FILTER_NOTE_TEXTBOX_COORDS.y()).intValue(), noteFilterWidgetEnabled() ? 0xFF00E600 : 0xFF005C00);
 
 			// Filter Instrument
-			font.drawString(matrixStack, ModItems.SWITCHBOARD.getInstrumentName(selectedSwitchboardStack), new Float(FILTER_INSTRUMENT_TEXTBOX_COORDS.x).intValue(), new Float(FILTER_INSTRUMENT_TEXTBOX_COORDS.y).intValue(), instrumentFilterWidgetEnabled() ? 0xFF00E600 : 0xFF005C00);
+			font.draw(matrixStack, ModItems.SWITCHBOARD.getInstrumentName(selectedSwitchboardStack), Float.valueOf(FILTER_INSTRUMENT_TEXTBOX_COORDS.x()).intValue(), Float.valueOf(FILTER_INSTRUMENT_TEXTBOX_COORDS.y()).intValue(), instrumentFilterWidgetEnabled() ? 0xFF00E600 : 0xFF005C00);
 
 			// Broadcast Note
-			font.drawString(matrixStack, ItemMidiSwitchboard.getBroadcastNoteAsString(selectedSwitchboardStack), new Float(BROADCAST_NOTE_TEXTBOX_COORDS.x).intValue(), new Float(BROADCAST_NOTE_TEXTBOX_COORDS.y).intValue(), broadcastNoteWidgetEnabled() ? 0xFF00E600 : 0xFF005C00);
+			font.draw(matrixStack, ItemMidiSwitchboard.getBroadcastNoteAsString(selectedSwitchboardStack), Float.valueOf(BROADCAST_NOTE_TEXTBOX_COORDS.x()).intValue(), Float.valueOf(BROADCAST_NOTE_TEXTBOX_COORDS.y()).intValue(), broadcastNoteWidgetEnabled() ? 0xFF00E600 : 0xFF005C00);
             
             // Instrument Volume
-			font.drawString(matrixStack, ItemMidiSwitchboard.getInstrumentVolumePercent(selectedSwitchboardStack).toString(), new Float(INSTRUMENT_VOLUME_TEXTBOX_COORDS.x).intValue(), new Float(INSTRUMENT_VOLUME_TEXTBOX_COORDS.y).intValue(), instrumentVolumeWidgetEnabled() ? 0xFF00E600 : 0xFF005C00);
+			font.draw(matrixStack, ItemMidiSwitchboard.getInstrumentVolumePercent(selectedSwitchboardStack).toString(), Float.valueOf(INSTRUMENT_VOLUME_TEXTBOX_COORDS.x()).intValue(), Float.valueOf(INSTRUMENT_VOLUME_TEXTBOX_COORDS.y()).intValue(), instrumentVolumeWidgetEnabled() ? 0xFF00E600 : 0xFF005C00);
 		}
        
         return matrixStack;
@@ -261,10 +265,10 @@ public abstract class ASwitchboardBlockGui<T extends ASwitchboardContainer> exte
             if(broadcastNote + 1 <= Byte.MAX_VALUE) {
                 broadcastNote++;
             } else {
-                broadcastNote = new Integer(broadcastNote - (broadcastNote % 12)).byteValue();
+                broadcastNote = Integer.valueOf(broadcastNote - (broadcastNote % 12)).byteValue();
             }
         } else {
-            broadcastNote = new Integer(broadcastNote - 11).byteValue();
+            broadcastNote = Integer.valueOf(broadcastNote - 11).byteValue();
         }
 
         ItemMidiSwitchboard.setBroadcastNote(selectedSwitchboardStack, broadcastNote);
@@ -276,12 +280,12 @@ public abstract class ASwitchboardBlockGui<T extends ASwitchboardContainer> exte
 
         if((broadcastNote / 12)  < 10) {
             if(broadcastNote + 12 <= Byte.MAX_VALUE) {
-                broadcastNote = new Integer(broadcastNote + 12).byteValue();
+                broadcastNote = Integer.valueOf(broadcastNote + 12).byteValue();
             } else {
-                broadcastNote = new Integer(broadcastNote + - 108).byteValue();
+                broadcastNote = Integer.valueOf(broadcastNote + - 108).byteValue();
             }
         } else {
-            broadcastNote = new Integer(broadcastNote - 120).byteValue();
+            broadcastNote = Integer.valueOf(broadcastNote - 120).byteValue();
         }
         ItemMidiSwitchboard.setBroadcastNote(selectedSwitchboardStack, broadcastNote);
         this.syncSwitchboardToServer();
@@ -324,7 +328,7 @@ public abstract class ASwitchboardBlockGui<T extends ASwitchboardContainer> exte
     }
     
 	protected Boolean invalidFilterNote() {
-		return new Integer(filterNoteOctave*12+filterNoteLetter) > Byte.MAX_VALUE;
+		return Integer.valueOf(filterNoteOctave*12+filterNoteLetter) > Byte.MAX_VALUE;
 	}
 
     protected void loadFilterLetterAndOctave() {
@@ -346,8 +350,8 @@ public abstract class ASwitchboardBlockGui<T extends ASwitchboardContainer> exte
     protected Boolean broadcastModeWidgetEnabled() {return false;}
     protected Boolean broadcastNoteWidgetEnabled() {return false;}
     protected Boolean instrumentVolumeWidgetEnabled() {return false;}
-    protected abstract Vector2f titleBoxPos();
-    protected abstract Vector2f titleBoxBlit();
-    protected abstract Vector2f titleBoxSize();
-    protected Vector2f switchboardSlotPos() {return new Vector2f(9,187);}
+    protected abstract Vector3f titleBoxPos();
+    protected abstract Vector3f titleBoxBlit();
+    protected abstract Vector3f titleBoxSize();
+    protected Vector3f switchboardSlotPos() {return new Vector3f(9,187,0);}
 }
